@@ -15,7 +15,7 @@
 ; along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 name    = Qgoda
-version = v0.9.2
+version = v0.9.3
 author  = Guido Flohr <guido.flohr@cantanea.com>
 license = GPL_3::or_later
 copyright_holder = Guido Flohr
